Changelog
=========

10.9.dev0 - (unreleased)
------------------------

10.8 - (2016-10-03)
-------------------
* Change: Use IContextWrapper from plone.stringinterp intead of custom one
  [avoinea]

10.7 - (2016-05-19)
-------------------
* Change: pylint fixes
  [ichim-david refs #71940]

10.6 - (2016-03-31)
-------------------
* Cleanup: Cleanup pdftk specific code
  [avoinea]
* Bug fix: Warn if EEACONVERTER_TEMP is not set and fallback to CLIENT_HOME/tmp
  instead of crashing entire application
  [avoinea]

10.5 - (2016-02-15)
-------------------
* Bug fix: in the "Contents" section, avoid the text to split between pages
  [danielm-gh refs #67840]

10.4 - (2016-02-03)
-------------------
* Bug fix: text (country names) in the "Contents" section doesn't split between
  pages
  [danielm-gh refs #67840]

10.3 - (2015-12-11)
-------------------
* Change: Fixed wkhtmltox dependency on centos
  [voineali refs #31324]

10.2 - (2015-12-07)
-------------------
* Change: Added system depenedencies within setup.py
  [voineali refs #27406]

10.1 - (2015-10-22)
-------------------
* Bug Fix; add -flatten option to fix #28943. It's prevent transparence cover
  [lucas refs #28943]

10.0 - (2015-09-10)
-------------------
* Feature: Added utility to update PDF metadata. Moved from eea.reports
  [voineali refs #28522]
* Feature: Added utility to extract metadata from PDF. Moved from eea.reports
  [voineali refs #28522]
* Feature: Added utility to extract cover image from PDF. Moved from eea.reports
  [voineali refs #28522]
* Change: Drop pdftk dependency and use pure Python PyPDF2 package
  [voineali refs #28522]

9.6 - (2015-08-18)
------------------
* Change: added pdf_custom_fixes.css loaded by pdf.header and pdf.footer
  in case there is a need for quickfixes
  [ichimdav refs #27537]
* Bug fix: fixed pdf.footer title and page number when used on indicators
  [ichimdav refs #27537]

9.5 - (2015-07-28)
------------------